syntax = "proto3";

option java_package = "hu.bme.mit.inf.modes3.messaging.mms.messages";
option java_multiple_files = true;

message TurnoutState {
	enum State {
		STRAIGHT = 0;
		DIVERGENT = 1;
	}

	uint32 turnoutID = 1;
	State state = 2;
}
